--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://test.github.io/"
+baseurl = "https://bamasa.github.io/test.github.io/"
 languageCode = "en-us"
 title = "the website title shown on the tab"
 theme = "casper"
